monitoring/manual-monitoring/prometheus-default-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
