monitoring/manual-monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: prometheus
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.secyour.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
  tls:
    - hosts:
        - prometheus.secyour.space
      secretName: monitoring-cert-tls # Replace with your TLS secret name
